--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Stefan Lentner <stefan@playplay.com>",
   "license": "MIT",
   "dependencies": {
+    "@slack/web-api": "^6.8.0",
     "express": "^4.18.2"
   },
   "scripts": {
