--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@slack/web-api": "^6.8.0",
+    "arpad": "^2.0.0",
     "express": "^4.18.2"
   },
   "scripts": {
